2013-10-21  Gavin Salam  <gavin.salam@cern.ch>

	* DEVEL-GUIDELINES:
	added some first thoughts on guidelines for reviewing

2013-09-24  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* VERSION:
	* NEWS:
	released fjcontrib 1.008 with new contrib JetCleanser 1.0.0

	* contribs.svn:
	added JetCleanser 1.0.0

2013-09-22  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * data/Pythia-Zp2jets-lhc-pileup-1ev.dat
        replaced with new file including also particle ID and charge.
        The events remain the same (up to, sometimes, differences in
        the last digit), the "make check" still work without changing
        the old reference files

2013-09-22  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * utils/check.sh
        added a safety check to verify if tput is present on the system
        before using it to set colors

2013-09-19  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * utils/check.sh
        added colors to Success/Failed output from "make check"

        * scripts/internal/generate-html-contents.pl 
        a flag can now be set to get an alphabetically ordered
        output (currently set to false, i.e. same output as before)

2013-09-19  Gregory Soyez  <soyez@fastjet.fr>

	* Makefile.in:
	* utils/check.sh:
	instead of having "make check" exit with an error whenever a test
	fails, let it keep going and print a summary of what has failed
	and succeded at the end of everything

2013-09-03  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* contribs.svn:
	switched SubjetCounting to version 1.0.1

	* NEWS:
	released fjcontrib 1.007 with new contrib SubjetCounting 1.0.1
        and bugfix for exclusion and inclusion of more than one contrib

2013-09-03  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* VERSION:
	* NEWS:
	released fjcontrib 1.007 with new contrib SubjetCounting 1.0.0
        and bugfix for exclusion and inclusion of more than one contrib
        (not actually released as a tarball, see entry above)        
